--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/projectSpring?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_project?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
@@ -13,3 +13,14 @@ spring.thymeleaf.mode=HTML
 server.port=8181
 server.error.include-exception=true
 server.error.include-stacktrace=always
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+jwt.secret=springboot
+logging.level.org.springframework.web: DEBUG
+logging.level.com.fasterxml.jackson: DEBUG
+spring.main.allow-circular-references=true
+
+pusher.appId=1442122
+pusher.key=33ae8c9470ab8fad0744
+pusher.secret=465fb6577dcae37d36d2
+pusher.cluster=eu
