--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,10 @@
             <artifactId>pusher-http-java</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
