--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,10 @@ pusher.appId=1442122
 pusher.key=33ae8c9470ab8fad0744
 pusher.secret=465fb6577dcae37d36d2
 pusher.cluster=eu
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=stuff.taskmanager@gmail.com
+spring.mail.password=tajp ugso robl dwor
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
